<resources>
    <string name="app_name">Pop Movies</string>
    <string name="sort_by">Sort By</string>
    <string name="sort_by_popular">Popular</string>
    <string name="sort_by_top_rated">Top Rated</string>
    <string name="sort_by_favorite">Favorite</string>
    <string name="poster">Movie Poster</string>
    <string name="poster_thumbnail">Movie Poster Thumbnail</string>
    <string name="error_message">Fail to get the results,
        please check the internet connection and try again.</string>

    <string name="no_trailer_message">No Trailer Exists.</string>
    <string name="no_review_message">No reviews for now.</string>
    <string name="trailers">Trailers:</string>
    <string name="trailer_name">Trailer Names</string>
    <string name="reviews">Reviews:</string>
    <string name="reviewer">Reviewer</string>
    <string name="review_details">Review Details</string>

    <string name="favorite_movie">This movie has been added to your favorite movie list.</string>
    <string name="unfavorite_movie">This movie has been removed from your favorite movie list.</string>




</resources>
